[gd_scene load_steps=6 format=3 uid="uid://sw8v2c4e1hel"]

[ext_resource type="Script" uid="uid://bmo0jxjevon1t" path="res://scripts/levels/game.gd" id="1_jkhre"]
[ext_resource type="PackedScene" uid="uid://d1iyo5e7r7ki8" path="res://scenes/Objects/Star.tscn" id="2_hmkul"]
[ext_resource type="PackedScene" uid="uid://doxk5ebwq510y" path="res://scenes/Objects/Player.tscn" id="3_wp50s"]
[ext_resource type="PackedScene" uid="uid://dyb4kuje21an7" path="res://scenes/HUDs/Game.tscn" id="4_hmkul"]

[sub_resource type="Curve2D" id="Curve2D_cpr0p"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 10, 17, 0, 0, 0, 0, 10, 17, 0, 0, 0, 0, 449, 22, 0, 0, 0, 0, 10, 17, 0, 0, 0, 0, 445, 36, 0, 0, 0, 0, 16, 30, 0, 0, 0, 0, 10, 17)
}
point_count = 7

[node name="Game" type="Node2D"]
script = ExtResource("1_jkhre")
collectable = ExtResource("2_hmkul")

[node name="Player" parent="." instance=ExtResource("3_wp50s")]
position = Vector2(217, 661)
speed = 130.0

[node name="BackgroundSound" type="AudioStreamPlayer" parent="."]

[node name="CollectableTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_cpr0p")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(9.691864, 16.99649)

[node name="CanvasLayer" parent="." instance=ExtResource("4_hmkul")]

[connection signal="collect" from="Player" to="CanvasLayer" method="_on_player_collect"]
[connection signal="timeout" from="CollectableTimer" to="." method="_on_collectable_timer_timeout"]
